--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ crashlytics-build.properties
 # Crashlytics generated file
 crashlytics-build.properties
 DeadPixel/Temp/UnityLockfile
+DeadPixel/Library/assetDatabase3
